--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>candl</title>
-  <link
+<html lang="uk">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Yeseva+One&display=swap" rel="stylesheet">
+    <title>candl</title>
+    <link
       rel="apple-touch-icon"
       sizes="57x57"
       href="images/favicon/apple-icon-57x57.png"
@@ -83,13 +86,85 @@
     <meta name="theme-color" content="#ffffff" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-  
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container header__inner">
+        <a class="logo" href="#">
+          <img class="logo__img" src="images/logo-header.png" alt="" />
+        </a>
+        <nav class="menu">
+          <ul class="menu__list">
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Про нас</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Каталог</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Команда</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Отзывы</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Курсы</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="#" class="menu__list-link">Контакты</a>
+            </li>
+          </ul>
+        </nav>
+        <a class="phone" href="tel:+4565789876">+45 65 78 98 76</a>
+      </div>
+    </header>
 
+    <footer class="footer">
+     <div class="container footer__inner">
+      <a class="logo" href="#">
+        <img class="logo__img" src="images/logo.png" alt="" />
+      </a>
+      <nav class="menu">
+        <ul class="menu__list">
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Про нас</a>
+          </li>
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Каталог</a>
+          </li>
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Команда</a>
+          </li>
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Отзывы</a>
+          </li>
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Курсы</a>
+          </li>
+          <li class="menu__list-item">
+            <a href="#" class="menu__list-link">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer__contacts">
+        <a class="footer__phone" href="tel:+4565789876">+45 65 78 98 76</a>
+        <a class="email" href="mailto:candelsCandels@gmail.com">candelsCandels@gmail.com</a>
+        <ul class="footer__socil">
+          <li class="footer__socil-item">
+            <a class="footer__social-link href="#" ">
+              <img class="footer__social-img" src="images/facebook.svg" alt="">
+            </a>
+          </li>
+          <li class="footer__socil-item"><a href="#" class="footer__social-link"><img src="images/inst.svg" alt="" class="footer__social-img"></a></li>
+          <li class="footer__socil-item"><a href="#" class="footer__social-link"><img src="images/lnk.svg" alt="" class="footer__social-img"></a></li>
+          <li class="footer__socil-item"><a href="#" class="footer__social-link"><img src="images/youtube.svg" alt="" class="footer__social-img"></a></li>
+        </ul>
+      </div>
+     </div>
+    </footer>
 
-  <script src="js/main.js"></script>
-</body>
+    <script src="js/main.js"></script>
+  </body>
 </html>
