--- a/index.html
+++ b/index.html
@@ -95,8 +95,15 @@
         <a class="logo" href="#">
           <img class="logo__img" src="images/logo-header.png" alt="" />
         </a>
-        <nav class="menu">
-          <ul class="menu__list">
+        <nav class="menu header__menu">
+          <button class="menu__btn">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <ul class="menu__list header__menu-list">
             <li class="menu__list-item">
               <a href="#" class="menu__list-link">Про нас</a>
             </li>
@@ -126,8 +133,8 @@
       <a class="logo" href="#">
         <img class="logo__img" src="images/logo.png" alt="" />
       </a>
-      <nav class="menu">
-        <ul class="menu__list">
+      <nav class="menu footer__menu">
+        <ul class="menu__list footer__menu-list">
           <li class="menu__list-item">
             <a href="#" class="menu__list-link">Про нас</a>
           </li>
