--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -124,10 +124,29 @@
             </li>
           </ul>
         </nav>
-        <a class="phone" href="tel:+4565789876">+45 65 78 98 76</a>
+        <a class="phone" href="tel:+4956578987">+495 657 89 87</a>
       </div>
     </header>
-
+    <main class="main">
+      <section class="top">
+        <div class="container top__inner">
+          <div class="top__content">
+            <h3 class="top__title">
+              Создайте атмосферу уюта и гармонии!
+            </h3>
+            <p class="top__text">
+              Создайте особую атмосферу в своем доме с нашей экологически чистой и качественной продукцией из 100% натурального соевого воска.
+            </p>
+            <button class="top__buy">Купить</button>
+          </div>
+            <picture class="top__img">
+              <source srcset="images/top-s.png" media="(max-width: 360px)">
+              <source srcset="images/top-m.png" media="(max-width: 480px)">
+              <img class="top__img-l" src="images/top-L.png" alt="">
+            </picture>
+        </div>
+      </section>
+    </main>
     <footer class="footer">
      <div class="container footer__inner">
       <a class="logo" href="#">
@@ -156,7 +175,7 @@
         </ul>
       </nav>
       <div class="footer__contacts">
-        <a class="footer__phone" href="tel:+4565789876">+45 65 78 98 76</a>
+        <a class="footer__phone" href="tel:+4956578987">+495 657 89 87</a>
         <a class="email" href="mailto:candelsCandels@gmail.com">candelsCandels@gmail.com</a>
         <ul class="footer__socil">
           <li class="footer__socil-item">
