--- a/index.html
+++ b/index.html
@@ -146,6 +146,33 @@
             </picture>
         </div>
       </section>
+      <section class="about">
+        <div class="container about__inner">
+          <div class="about__content">
+            <h2 class="about__title title">Про нас</h2>
+            <p class="about__text">
+              Богдан создатель бренда не всегда заинтересован в изготовлении разнообразных вещей на дому. Он регулярно экспериментировал с разными материалами и инструментами, попробовав свои силы во многих отраслях, включая изготовление свечей.
+            </p>
+            <p class="about__text">
+              Соевый воск изготавливается из соевых бобов, сращиваемых в Дании, и этот вид воска является экологически чистым и безопасным для здоровья.
+            </p>
+          </div>
+          <ul class="about__list">
+            <li class="about__item">
+              <img class="about__item-img about__item-img--1" src="images/about-1.jpg" alt="">
+              <p class="about__item-text">Наслаждайтесь моментом</p>
+            </li>
+            <li class="about__item">
+              <img class="about__item-img about__item-img--2" src="images/about-2.png" alt="">
+              <p class="about__item-text">Создайте любимую атмосферу</p>
+            </li>
+            <li class="about__item">
+              <img class="about__item-img about__item-img--3" src="images/about-3.jpg" alt="">
+              <p class="about__item-text">Изготовлены с любовью</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
      <div class="container footer__inner">
