--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               Соевый воск изготавливается из соевых бобов, сращиваемых в Дании, и этот вид воска является экологически чистым и безопасным для здоровья.
             </p>
           </div>
-          <ul class="about__list">
+          <ul class="about__list section--decor">
             <li class="about__item">
               <img class="about__item-img about__item-img--1" src="images/about-1.jpg" alt="">
               <p class="about__item-text">Наслаждайтесь моментом</p>
@@ -171,6 +171,59 @@
               <p class="about__item-text">Изготовлены с любовью</p>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="products section">
+        <div class="container section__inner">
+          <div class="products__descr section__descr">
+            <h2 class="products__title title">
+              Наши товары
+            </h2>
+            <p class="products__text section__text">
+              Мы используем только лучшие качественные материалы: соевый воск, восковые красители, высококачественные ароматические масла и хлопчатобумажные фитильцы. Оттенки свеч очень гармонично сочетаются с ароматом, создавая незабываемую атмосферу в вашем доме.
+            </p>
+          </div>
+          <div class="products__content section__content-descr section--decor">
+            <div class="products__item">
+              <img class="products__item-img" src="images/product-1.jpg" alt="">
+              <p class="products__item-price">10$</p>
+              <h4 class="products__item-title">"Сердечко любви"</h4>
+              <p class="products__item-text">
+                Запах: нежный аромат розы и ванили.
+                Для чего: для романтического настроения
+              </p>
+              <button class="button">Купить</button>
+            </div>
+            <div class="products__item">
+              <img class="products__item-img" src="images/product-2.jpg" alt="">
+              <p class="products__item-price">20$</p>
+              <h4 class="products__item-title">"Вихрь любви"</h4>
+              <p class="products__item-text">
+                Запах: нежный аромат лаванды.
+                Для чего: для создания атмосферы уюта
+              </p>
+              <button class="button">Купить</button>
+            </div>
+            <div class="products__item">
+              <img class="products__item-img" src="images/product-3.jpg" alt="">
+              <p class="products__item-price">10$</p>
+              <h4 class="products__item-title">"Радуга"</h4>
+              <p class="products__item-text">
+                Запах: Свежий аромат лайма.
+                Зачем: для энергии и свежести в помещении.
+              </p>
+              <button class="button">Купить</button>
+            </div>
+            <div class="products__item">
+              <img class="products__item-img" src="images/product-4.jpg" alt="">
+              <p class="products__item-price">10$</p>
+              <h4 class="products__item-title">"Женское обаяние"</h4>
+              <p class="products__item-text">
+                Запах: нежный аромат лаванды и фрезии. Для чего: для комфорта и уюта.
+              </p>
+              <button class="button">Купить</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
