--- a/index.html
+++ b/index.html
@@ -226,6 +226,80 @@
           </div>
         </div>
       </section>
+      <section class="steps section">
+        <div class="container section__inner">
+          <div class="steps__descr section__descr">
+            <h2 class="steps__title title">
+              Этапы создания свечей
+            </h2>
+            <p class="steps__text section__text">
+              Создание свечи из соевого воска может состоять из следующих этапов:
+            </p>
+          </div>
+          <ol class="steps__list section__content-descr section--decor">
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль для свечи, ароматизаторы, красители и другие дополнительные материалы.
+              </p>
+              <img class="steps__item-img" src="images/s1.jpg" alt="">
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка формы: выбор формы для свечи и подготовка к наполнению воском.
+              </p>
+              <img class="steps__item-img" src="images/s2.jpg" alt="">
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/s3.jpg" alt="">
+              <p class="steps__item-text">
+                Приготовление воска: расплавление соевого воска в плавильном устройстве до нужной температуры. Добавление ароматизаторов и красителей при необходимости.
+              </p>
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/s4.jpg" alt="">
+              <p class="steps__item-text">
+                Подготовка фитиля: вставка фитиля в форму и зафиксирование его так, чтобы он был равномерно напряжен.
+              </p>
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль для свечи, ароматизаторы, красители и другие дополнительные материалы.
+              </p>
+              <img class="steps__item-img" src="images/s5.jpg" alt="">
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Наполнение формы: воск налить в форму, пока она не заполнится полностью. Ждать, пока он утвердится.
+              </p>
+              <img class="steps__item-img" src="images/s6.jpg" alt="">
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/s7.jpg" alt="">
+              <p class="steps__item-text">
+                Приготовление воска: расплавление соевого воска в плавильном устройстве до нужной температуры. Добавление ароматизаторов и красителей при необходимости.
+              </p>
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/s8.jpg" alt="">
+              <p class="steps__item-text">
+                Подготовка фитиля: вставка фитиля в форму и зафиксирование его так, чтобы он был равномерно напряжен.
+              </p>
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль для свечи, ароматизаторы, красители и другие дополнительные материалы.
+              </p>
+              <img class="steps__item-img" src="images/s9.jpg" alt="">
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Наполнение формы: воск налить в форму, пока она не заполнится полностью. Ждать, пока он утвердится.
+              </p>
+              <img class="steps__item-img" src="images/s10.jpg" alt="">
+            </li>
+          </ol>
+        </div>
+      </section>
     </main>
     <footer class="footer">
      <div class="container footer__inner">
