--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
             </p>
           </div>
           <div class="products__content section__content-descr section--decor">
-            <div class="products__item">
-              <img class="products__item-img" src="images/product-1.jpg" alt="">
+            <div class="products__item products__item--1">
+              <img class="products__item-img products__item-img--1" src="images/product-1.jpg" alt="">
               <p class="products__item-price">10$</p>
               <h4 class="products__item-title">"Сердечко любви"</h4>
               <p class="products__item-text">
@@ -194,8 +194,8 @@
               </p>
               <button class="button">Купить</button>
             </div>
-            <div class="products__item">
-              <img class="products__item-img" src="images/product-2.jpg" alt="">
+            <div class="products__item products__item--1">
+              <img class="products__item-img products__item-img--1" src="images/product-2.jpg" alt="">
               <p class="products__item-price">20$</p>
               <h4 class="products__item-title">"Вихрь любви"</h4>
               <p class="products__item-text">
@@ -204,8 +204,8 @@
               </p>
               <button class="button">Купить</button>
             </div>
-            <div class="products__item">
-              <img class="products__item-img" src="images/product-3.jpg" alt="">
+            <div class="products__item products__item--1">
+              <img class="products__item-img products__item-img--1" src="images/product-3.jpg" alt="">
               <p class="products__item-price">10$</p>
               <h4 class="products__item-title">"Радуга"</h4>
               <p class="products__item-text">
@@ -214,8 +214,8 @@
               </p>
               <button class="button">Купить</button>
             </div>
-            <div class="products__item">
-              <img class="products__item-img" src="images/product-4.jpg" alt="">
+            <div class="products__item products__item--1">
+              <img class="products__item-img products__item-img--1" src="images/product-4.jpg" alt="">
               <p class="products__item-price">10$</p>
               <h4 class="products__item-title">"Женское обаяние"</h4>
               <p class="products__item-text">
@@ -298,6 +298,50 @@
               <img class="steps__item-img" src="images/s10.jpg" alt="">
             </li>
           </ol>
+        </div>
+      </section>
+      <section class="courses section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="steps__title title">
+              Наши курсы
+            </h2>
+            <p class="section__text">
+              Наши курсы позволяют сделать первый шаг в новой карьере или углубить свои знания в своей области, развиваться как профессионал, а также улучшить качество своей жизни.
+            </p>
+          </div>
+          <div class="products__content courses__content section__content-descr section--decor">
+            <div class="products__item courses__item">
+              <div class="courses__item-img">
+                <img class="products__item-img" src="images/courses-1.jpg" alt="">
+                <p class="courses__title">Основы изготовления свечей</p>
+                <p class="courses__time">
+                  Обучение <span>- 20 лет</span>
+                </p>
+                <p class="courses__prise">Цена - 40$</p>
+              </div>
+              <h4 class="products__item-title">Основы изготовления</h4>
+              <p class="products__item-text">
+                Будем обучать основам изготовления свечей из разных материалов.
+              </p>
+              <button class="button">Купить курс</button>
+            </div>
+            <div class="products__item courses__item">
+              <div class="courses__item-img">
+                <img class="products__item-img" src="images/courses-2.jpg" alt="">
+                <p class="courses__title">Искусство ароматерапии</p>
+                <p class="courses__time">
+                  Обучение <span>- 20 лет</span>
+                </p>
+                <p class="courses__prise">Цена - 40$</p>
+              </div>
+              <h4 class="products__item-title">Искусство ароматерапии</h4>
+              <p class="products__item-text">
+                Будем изучать искусство ароматерапии и изготовление свечей.
+              </p>
+              <button class="button">Купить курс</button>
+            </div>
+          </div>
         </div>
       </section>
     </main>
