--- a/index.html
+++ b/index.html
@@ -344,6 +344,56 @@
           </div>
         </div>
       </section>
+      <section class="team section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="steps__title title">
+              Наши преподаватели
+            </h2>
+            <p class="section__text">
+              Эти люди работают вместе, чтобы создать курсы для вас, которые помогут вам начать собственный бизнес или хобби.
+            </p>
+          </div>
+        <div class="team__content section__content-descr">
+          <div class="team__item">
+            <img class="team__img" src="images/team-1.jpg" alt="">
+            <div class="team__item-box">
+              <p class="team__item-name">Преподаватель Богдан</p>
+              <p class="team__item-descr">
+                Имеет опыт преподавания 4 года
+              </p>
+            </div>
+          </div>
+          <div class="team__item">
+            <img class="team__img" src="images/team-2.jpg" alt="">
+            <div class="team__item-box">
+              <p class="team__item-name">Преподаватель Анна</p>
+              <p class="team__item-descr">
+                Имеет опыт преподавания 6 лет
+              </p>
+            </div>
+          </div>
+          <div class="team__item">
+            <img class="team__img" src="images/team-3.jpg" alt="">
+            <div class="team__item-box">
+              <p class="team__item-name">Преподаватель Галина</p>
+              <p class="team__item-descr">
+                Обучает сфере дизайна и декорирования
+              </p>
+            </div>
+          </div>
+          <div class="team__item">
+            <img class="team__img" src="images/team-4.jpg" alt="">
+            <div class="team__item-box">
+              <p class="team__item-name">Маркетолог Ольга</p>
+              <p class="team__item-descr">
+                Поможет вам с рекламой опыт 6 лет
+              </p>
+            </div>
+          </div>
+        </div>
+      </div> 
+      </section>
     </main>
     <footer class="footer">
      <div class="container footer__inner">
