--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -394,6 +395,140 @@
         </div>
       </div> 
       </section>
+      <section class="feedback section">
+        <div class="container section__inner">
+          <div class="feedback__descr section__descr">
+            <h2 class="steps__title title">
+              Отзывы от клиентов
+            </h2>
+            <p class="section__text">
+              Наши покупатели имеют разный возраст, статус, занятия и интересы, но у них есть одна общая черта – они стремятся к гармонии и обретают радость в маленьких радостях жизни, которые создают атмосферу уюта и гармонии в их доме.
+            </p>
+          </div>
+          <div class="feedback__content section--decor">
+            <div class="feedback__slider">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img class="feedback__item-img" src="images/slide.jpg" alt="">
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.svg" alt="">
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a class="feedback__item-sociallink" href="#">
+                        <img src="images/inst.svg" alt="">
+                      </a>
+                      <p class="feedback__item-name">
+                        Иван Пилипенко
+                      </p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого Валентина для моей девушки и она была просто невероятна! Запах был очень приятным и романтичным, а форма сердечка была совершенной для этого праздника. Моя девушка была очень довольна подарком, и я точно закажу еще свеч от этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">Купить товар</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img class="feedback__item-img" src="images/slide.jpg" alt="">
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.svg" alt="">
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a class="feedback__item-sociallink" href="#">
+                        <img src="images/inst.svg" alt="">
+                      </a>
+                      <p class="feedback__item-name">
+                        Иван Пилипенко
+                      </p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого Валентина для моей девушки и она была просто невероятна! Запах был очень приятным и романтичным, а форма сердечка была совершенной для этого праздника. Моя девушка была очень довольна подарком, и я точно закажу еще свеч от этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">Купить товар</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img class="feedback__item-img" src="images/slide.jpg" alt="">
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.svg" alt="">
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a class="feedback__item-sociallink" href="#">
+                        <img src="images/inst.svg" alt="">
+                      </a>
+                      <p class="feedback__item-name">
+                        Иван Пилипенко
+                      </p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого Валентина для моей девушки и она была просто невероятна! Запах был очень приятным и романтичным, а форма сердечка была совершенной для этого праздника. Моя девушка была очень довольна подарком, и я точно закажу еще свеч от этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">Купить товар</button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img class="feedback__item-img" src="images/slide.jpg" alt="">
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.svg" alt="">
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a class="feedback__item-sociallink" href="#">
+                        <img src="images/inst.svg" alt="">
+                      </a>
+                      <p class="feedback__item-name">
+                        Иван Пилипенко
+                      </p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого Валентина для моей девушки и она была просто невероятна! Запах был очень приятным и романтичным, а форма сердечка была совершенной для этого праздника. Моя девушка была очень довольна подарком, и я точно закажу еще свеч от этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">Купить товар</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="sertificates section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="steps__title title">
+              Сертификаты качества
+            </h2>
+            <p class="section__text">
+              Сертификаты обеспечивают доверие и уверенность для наших клиентов.
+            </p>
+          </div>
+          <div class="sertificates__content section__content-descr section--decor">
+
+          </div>
+        </div>
+      </section>
+      <section class="questions section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="steps__title title">
+              Часто задаваемые вопросы
+            </h2>
+          </div>
+          <div class="questions__content section__content-descr">
+
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
      <div class="container footer__inner">
@@ -438,7 +573,7 @@
       </div>
      </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
