--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       </div> 
       </section>
       <section class="feedback section">
-        <div class="container section__inner">
+        <div class="container feedback__inner section__inner">
           <div class="feedback__descr section__descr">
             <h2 class="steps__title title">
               Отзывы от клиентов
@@ -504,7 +504,7 @@
       </section>
       <section class="sertificates section">
         <div class="container section__inner">
-          <div class="section__descr">
+          <div class="sertificates__descr section__descr">
             <h2 class="steps__title title">
               Сертификаты качества
             </h2>
@@ -512,8 +512,24 @@
               Сертификаты обеспечивают доверие и уверенность для наших клиентов.
             </p>
           </div>
-          <div class="sertificates__content section__content-descr section--decor">
-
+          <div class="sertificates__content section--decor">
+            <div class="sertificates__slider">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <img src="images/sert-1.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/sert-2.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/sert-1.jpg" alt="">
+                  </div>
+                  <div class="swiper-slide">
+                    <img src="images/sert-2.jpg" alt="">
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+            </div>
           </div>
         </div>
       </section>
