--- a/index.html
+++ b/index.html
@@ -545,6 +545,23 @@
           </div>
         </div>
       </section>
+      <section class="promo">
+        <div class="container promo__inner">
+          <p class="promo__text">Покупайте больше, экономьте больше</p>
+          <a class="promo__link" href="#">В каталог</a>
+        </div>
+      </section>
+      <section class="contacts">
+        <div class="container contacts__inner">
+          <form class="form" action="">
+            <p class="form__title">Покупайте больше, экономьте больше</p>
+            <input class="form__input" type="text" placeholder="Имя">
+            <input class="form__input" type="email" placeholder="Е-mail">
+            <button class="form__btn" type="submit">Подписаться</button>
+          </form>
+          <img class="contacts__img" src="images/contacts.jpg" alt="">
+        </div>
+      </section>
     </main>
     <footer class="footer">
      <div class="container footer__inner">
