section promo/contacts

--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
             <button class="form__btn" type="submit">Подписаться</button>
           </form>
           <img class="contacts__img" src="images/contacts.jpg" alt="">
+          <picture></picture>
         </div>
       </section>
     </main>
