--- a/index.html
+++ b/index.html
@@ -540,8 +540,201 @@
               Часто задаваемые вопросы
             </h2>
           </div>
-          <div class="questions__content section__content-descr">
-
+          <div class="questions__content">
+            <div class="accordeon">
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Какие запахи доступны для свечей?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Как долго горят свечи?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Можно ли сделать заказ на индивидуальный дизайн свечи?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Какие варианты доставки?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Как оплачивать заказ?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Как долго длится курс?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Какая цена на курс?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+              <div class="accordeon__item">
+                <button class="accordeon__title">
+                  Есть ли сертификат на курс?
+                </button>
+                <div class="accordeon__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах, помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат, который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и маскулинный аромат, придающий ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
