--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
       <section class="contacts">
         <div class="container contacts__inner">
           <form class="form" action="">
-            <p class="form__title">Покупайте больше, экономьте больше</p>
+            <p class="form__title">Подпишись на наши акции</p>
             <input class="form__input" type="text" placeholder="Имя">
             <input class="form__input" type="email" placeholder="Е-mail">
             <button class="form__btn" type="submit">Подписаться</button>
